2012-01-24: Added block-structured transactions.

2012-01-14: Fixed problem where data returned from forms was of type NSString, which
            confused some monkey-patching code.
            Changed before_ hooks such that handlers returning false would terminate
            the process. So, if before_save returns anything other than false, the
            save continues. Only if before_save returns false does the save get
            interrupted.
            Fixed immutable string issue in validations.

2012-01-09: Added automatic date/timestamp support for created_at and updated_at columns
            Added Hash extension except, Array introspection methods has_hash_key? and
            has_hash_value?
            Commit of Formotion module including optional inclusion/suppression of the
            auto-date fields
            Specs


2012-12-30: Added Formotion module. This allows for tighter integration with Formotion
            Changed options for columns such that any arbitrary values can be inserted
            allowing for future expansion.

2012-12-14: Added lots of framework to validations
            Added validations for length, format, email, presence
            Added array type (thanks justinmcp)

2012-12-07: Added MIT license file.
            InputHelpers: Whitespace cleanup. Fixed keyboard show/hide to scroll to correct position.
            MotionModel::Column: Whitespace cleanup, added code to support cascading delete (:dependent => :destroy)
            MotionModel::Model: Whitespace cleanup, added code to support cascading destroy, destroy_all, and cascading if specified.
            relation_spec.rb: removed delete tests into cascading_delete_spec.rb

2012-12-06: Work on has_many to add cascading delete

MotionModel: POTENTIAL CODE-BREAKING CHANGE. has_many now takes two arguments
             only. Previously, it would allow a list of symbols or strings,
             now it conforms more to the Rails way of one call per relation.