@@ -1,4 +1,8 @@
-
+# 0.3.8 is the last version without adapters.
+# for backward compatibility, users should
+# specify that version in their gem command
+# or forward port their code to take advantage
+# of adapters.
 module MotionModel
-  VERSION = "0.3.8"
+  VERSION = "0.4.0"
 end
